--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Jekyll Template for Project Websites</h1>
-        <p>Simple and modern design for publishing blog posts, documentation and many more things for your project.
-          You can now clone and start to create a website for your project like this one.</p>
+        <h1>Altair Inspire™ Help Documentation</h1>
+        <p>Design Faster, Smarter, Lighter</p>
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
     </div>
 </div>
@@ -16,21 +15,13 @@ layout: default
 
     <div class="row">
         <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Jekyll?</h2>
+            <h2 class="header-light regular-pad">What is Altair Inspire™?</h2>
             <blockquote>
-              <p>Jekyll is a simple, blog-aware, static site generator. It takes a template
-              directory containing raw text files in various formats, runs it through
-              a converter (like <a href="https://daringfireball.net/projects/markdown/">Markdown</a>)
-              and our <a href="https://github.com/Shopify/liquid/wiki">Liquid</a> renderer, and
-              spits out a complete, ready-to-publish static website suitable
-              for serving with your favorite web server. Jekyll also happens to be the engine
-              behind <a href="https://pages.github.com">GitHub Pages</a>, which means you can use Jekyll
-              to host your project’s page, blog, or website from GitHub’s servers <strong>for
-              free</strong>.</p>
+              <p>Altair Inspire software is the industry's most powerful and easy-to-use Generative Design/Topology Optimization and rapid simulation solution for design engineers empowers its users by creating and investigating structurally efficient concepts quickly and easily. This can lead to reduced costs, development time, material consumption, and product weight.</p>
             </blockquote>
         </div>
         <div class="col-md-6 text-center">
-            <img src="img/jekyll-dark.png" alt="" class="img-responsive">
+            <img src="img/altair_inspire_logo.png" alt="" class="img-responsive">
         </div>
     </div>
 
@@ -38,23 +29,19 @@ layout: default
 
     <div class="row">
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to install and publish</h3>
-            <p>Get started by cloning source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
-              it will be automatically compiled and published under your project's subdomain on `github.io`.
-            </p>
+            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Increase Quality</h3>
+            <p>Altair Inspire allows users to rapidly explore and assess designs for static loads, normal modes, buckling and motion through an intuitive user experience leveraging its embedded physics engine. This enables users to ensure a quality and dependable design prior to any prototyping or production.</p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
+            <h3 class="text-center">Reduce Cost</h3>
+            <p>Leveraging simulation-driven design with Inspire early and often in the design process enables costs savings by reducing material usage, re-design iterations, and overall design time.</p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Git-based source control</h3>
-            <p>Leverage from Git version control system by
-              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
+            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Meet Time to Market Goals</h3>
+            <p>Simulation-driven design equips its users with the tools necessary to accelerate their overall design process. Inspire helps them to streamline the production of high-performance, quality parts and products. By utilizing Altair Inspire in the concept design phase, users can arrive at an ideal design concept extremely early in the process and reduce, or even eliminate re-design iterations.</p>
         </div>
     </div>
 
