--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@ layout: default
 
     <div class="row">
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
+            <h1 class="text-center"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i></h1>
             <h3 class="text-center">Increase Quality</h3>
             <p>Altair Inspire allows users to rapidly explore and assess designs for static loads, normal modes, buckling and motion through an intuitive user experience leveraging its embedded physics engine. This enables users to ensure a quality and dependable design prior to any prototyping or production.</p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
+            <h1 class="text-center"><i class="fa fa-money" aria-hidden="true"></i></h1>
             <h3 class="text-center">Reduce Cost</h3>
             <p>Leveraging simulation-driven design with Inspire early and often in the design process enables costs savings by reducing material usage, re-design iterations, and overall design time.</p>
         </div>
