--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
             </blockquote>
         </div>
         <div class="col-md-6 text-center">
-            <img src="img/altair_inspire_logo.png" alt="" class="img-responsive">
+            <img src="img/altair_demo.png" alt="" class="img-responsive">
         </div>
     </div>
 
