--- a/allforums.html
+++ b/allforums.html
@@ -7,7 +7,7 @@ sectionid: forum
 
 <div class="container">
     <div class="inner-content">
-        <h1>All Posts</h1> {% for page in site.forum %}
+        <h1>All Questions</h1> {% for page in site.forums %}
         <p>
             <strong><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></strong>
             <span>on {{ page.date | date: "%B %e, %Y" }} {% if page.author %} by {{ page.author }}{% endif %}</span>
