--- a/allforums.html
+++ b/allforums.html
@@ -28,15 +28,15 @@ comments: false
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="bg.png" alt="Carousel" style="width:100%;">
+        <img src="img/bg.png" alt="Carousel" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="bg2.jpg" alt="Carousel 2" style="width:100%;">
+        <img src="img/bg2.jpg" alt="Carousel 2" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="bg3.jpg" alt="Carousel 3" style="width:100%;">
+        <img src="img/bg3.jpg" alt="Carousel 3" style="width:100%;">
       </div>
     </div>
 
