--- a/allforums.html
+++ b/allforums.html
@@ -4,6 +4,26 @@ layout: default
 sectionid: forum
 comments: false
 ---
+<style>
+* {
+    box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+</style>
 
 <head>
   <title>Bootstrap Example</title>
@@ -14,7 +34,11 @@ comments: false
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+  
+  <h2>Two Equal Columns</h2>
 
+<div class="row">
+  <div class="column">
 <div class="container">
   <h2>Carousel Example</h2>  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -51,5 +75,47 @@ comments: false
     </a>
   </div>
 </div>
+  </div>
+  
+<div class="column">
+
+    <div class="container">
+  <h2>Carousel Example 2</h2>  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="img/bg.png" alt="Carousel" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="img/bg2.jpg" alt="Carousel 2" style="width:100%;">
+      </div>
+    
+      <div class="item">
+        <img src="img/bg3.jpg" alt="Carousel 3" style="width:100%;">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+  </div>
+  </div>
 
 </body>
