--- a/allforums.html
+++ b/allforums.html
@@ -36,10 +36,11 @@ comments: false
 <body>
   
   <h2>Two Equal Columns</h2>
-
 <div class="row">
-  <div class="column">
-<div class="container">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Some text..</p>
+      <div class="container">
   <h2>Carousel Example</h2>  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -75,11 +76,13 @@ comments: false
     </a>
   </div>
 </div>
+      
   </div>
-  
-<div class="column">
-
-    <div class="container">
+ 
+ <div class="column" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+     <div class="container">
   <h2>Carousel Example 2</h2>  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -115,7 +118,8 @@ comments: false
     </a>
   </div>
 </div>
+     
   </div>
-  </div>
+</div>
 
 </body>
