--- a/allforums.html
+++ b/allforums.html
@@ -37,9 +37,7 @@ comments: false
   
   <h2>Two Equal Columns</h2>
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
+  <div class="column">
       <div class="container">
   <h2>Carousel Example</h2>  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -79,17 +77,17 @@ comments: false
       
   </div>
  
- <div class="column" style="background-color:#bbb;">
+ <div class="column">
     <h2>Column 2</h2>
     <p>Some text..</p>
      <div class="container">
   <h2>Carousel Example 2</h2>  
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <div id="myCarouseltwo" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarouseltwo" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarouseltwo" data-slide-to="1"></li>
+      <li data-target="#myCarouseltwo" data-slide-to="2"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -108,11 +106,11 @@ comments: false
     </div>
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <a class="left carousel-control" href="#myCarouseltwo" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <a class="right carousel-control" href="#myCarouseltwo" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
